@@ -5,6 +5,7 @@ Changelog
 ---------------------
 
 - Fix setting agenda item description. [deiferni]
+- Fix automatic start of additionally added sequential tasks. [phgross]
 - Fix styling bug in tabbedview after showing bumblebee tooltip. [njohner]
 - Only show workspace notification tab when feature is activated. [njohner]
 - Fix response text for responsible changes to the same user. [phgross]
